# memory-dropbox

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: contributor-guidelines.md
.github/workflows/: ci.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_events_table.py  0003_derived_memories.py  0004_derived_memory_source_event.py  0005_observation_memories.py  0006_ingestion_memories.py
apps/api/app/: deps.py  main.py  wait_for_services.py
apps/api/app/routes/: events.py  health.py  home.py  ingest.py  items.py  memory.py  search.py
apps/api/templates/: index.html  item_detail.html  memory_activity.html
apps/worker/worker/: main.py
docs/: ARCHITECTURE.md  DECISIONS.md  EVALUATION.md  GITHUB_AND_CI.md  IMPLEMENTATION_NOTES.md  MEMORY_SUBSTRATE_APPLICATIONS.md  RELEASE_PLAYBOOK.md  ROADMAP.md
infra/docker/: .env.example  Dockerfile.api  Dockerfile.worker
infra/k8s/base/: api-deployment.yaml  namespace.yaml  worker-deployment.yaml
scripts/: demo.py
tests/: test_app_import.py  test_embeddings.py  test_event_derivation.py  test_events.py  test_health.py  test_items_schema.py
