[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-dropbox"
version = "0.1.0"
description = "Docker-first brain dump and retrieval framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.10.3",
  "pydantic-settings==2.6.1",
  "SQLAlchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "redis==5.2.0",
  "qdrant-client==1.12.1",
]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W"]

